--- a/us-umbrella-overview-english.html
+++ b/us-umbrella-overview-english.html
@@ -16,7 +16,7 @@
 
 
 <span class="target" id="top"></span><p><span class="raw-html"><a name="us-umbrella_top"></a></span></p>
-<p><span class="raw-html"><div class="banner"><p><em>Universal Server documentation</em> <a href="http://us.esperide.org">browse latest</a> <a href="https://olivier-boudeville.github.io/universal-server/index.html">browse mirror</a> <a href="us-umbrella-technical-manual-english.pdf">get PDF</a> <a href="#us-umbrella_top">go to top</a> <a href="#us-umbrella_bottom">go to bottom</a> <a href="mailto:about(dash)universal-server(at)esperide(dot)com?subject=[Universal%20Server]%20Remark">email us</a></p></div></span></p>
+<p><span class="raw-html"><div class="banner"><p><em>US documentation</em> <a href="http://us.esperide.org">browse latest</a> <a href="https://olivier-boudeville.github.io/Universal-Server/index.html">browse mirror</a> <a href="us-umbrella-overview-english.pdf">get PDF</a> <a href="#us-umbrella_top">go to top</a> <a href="#us-umbrella_bottom">go to bottom</a> <a href="mailto:about(dash)universal-server(at)esperide(dot)com?subject=[Universal%20Server]%20Remark">email us</a></p></div></span></p>
 <p><span class="raw-html"><center><img src="us-umbrella-title.png" width="70%"></img></center></span>
 </p>
 <div class="section" id="overview-of-the-universal-server-umbrella-project">
